alignment issues

--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -34,8 +34,9 @@
 
 @media(max-width: 700px) {
   .workContainer {
-    width: 95vw;
-    margin: 0 auto;
+    width: 400px;
+    display: flex;
+    justify-content: center;
   }
 }
 
